--- a/src/parts/Navbar.css
+++ b/src/parts/Navbar.css
@@ -1,6 +1,7 @@
 @media only screen and (max-width: 360px) and (max-height: 740px) {
     .parent{
         width: auto;
+        margin-left: 2%;
     }
     #firstnav{
         margin-right: -15%;
@@ -10,5 +11,12 @@
     }
     #thirdnav{
         margin-right: -15%;
+    }
+}
+@media only screen and (max-width: 768px) {
+    .parent{
+        width: 106%;
+        padding: auto;
+        position: center;
     }
 }
