--- a/src/parts/Herosections.css
+++ b/src/parts/Herosections.css
@@ -1,9 +1,15 @@
 @media(max-width:700px){
     .main{
-        margin-left: 7%;
+        margin-left: 1%;
+        
     }
     .button{
-        margin-left: 83%;
+        margin-left: 84%;
     
+    }
+}
+@media only screen and (max-width: 768px) {
+    .main {
+        margin-left: 6%;
     }
 }
