--- a/src/parts/maincontent.css
+++ b/src/parts/maincontent.css
@@ -7,15 +7,13 @@
     margin-top: 2%;
 }
 @media only screen and (max-width: 768px) {
-    .grid-cols-2 {
-      grid-template-columns: 1fr;
-    }
-  
-    .max-w-md {
-      max-width: none;
-    }
-    .main{
-      margin-left: 3%;
-    }
+  .main{
+    display: flex;
+    flex-direction: column;
+    width: 84%;
+  }
+
+    
+    
 
   }
