--- a/src/parts/MCartCrousels.css
+++ b/src/parts/MCartCrousels.css
@@ -37,8 +37,20 @@
     }
 }
 @media screen and (max-width: 768px) {
+    .standard{
+        width: 80%;
+        background-color: white;
+        
+    }
+    .slick-slider {
+        border: 2px solid gainsboro; /* Add a border around the container */
+        padding: 20px; /* Add some padding to create space inside the container */
+        margin: 20px 0; /* Add some margin to create space around the container */
+      }
+      
     .slick-arrow {
-        width: 21%;
+        width: 10%; 
+       margin-right: -1%;
     }
     .slick-next::before{
     font-family: 'slick';
@@ -67,10 +79,8 @@
     list-style: none;
     text-align: center;
     }
-    .standard{
-        width: auto;
-        
-    }
+   
+   
   }
   @media only screen 
   and (min-device-width: 768px) 
@@ -111,5 +121,6 @@
     list-style: none;
     text-align: center;
     }
+    
   
 }
