--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -5,3 +5,15 @@
     margin-left: 10%;
     margin-top: 3%;
 }
+@media (max-width: 768px) {
+  .cont {
+    margin-top: 32px;
+    margin-bottom: -20px;
+}
+.cross{
+  margin-bottom: 2px;
+  position: absolute;
+  top: 71.5%;
+  right: 40px;
+}
+}
