--- a/src/parts/Billing Nav.css
+++ b/src/parts/Billing Nav.css
@@ -1,7 +1,6 @@
-@media (max-width: 768px) {
-    .bnav {
-        width: 383px;
-        font-size: 14px;
-        margin-left: 14px;
+
+@media only screen and (max-width: 768px) {
+    .size{
+        font-size: 12px;
     }
 }
