--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -1,12 +1,14 @@
-.stan{
-    width: auto;
-    
-  	
+.custom{
+  align-items: center;
+
 }
 @media only screen and (max-width: 768px) {
   .nutshell{
       width: auto;
       overflow: hidden;
+  }
+  .custom{
+    width: 100%;
   }
   
 }
