--- a/src/components/Address.css
+++ b/src/components/Address.css
@@ -1,4 +1,17 @@
-.spiral{
-  
 
+.form{
+    width: 40%;
+    height: 0%;
 }
+@media only screen and (max-width: 768px) {
+    .nutshell{
+        width: auto;
+        overflow: hidden;
+    }
+    .form{
+        width: 80%;
+        margin-bottom: 17%;
+        margin-left: 12%;
+    }
+    
+  }
