--- a/src/components/Shipping.css
+++ b/src/components/Shipping.css
@@ -3,5 +3,15 @@
         width: auto;
         overflow: hidden;
     }
+    .card{
+        margin-left: -15px;
+    }
+    .price{
+        margin-right: 0px;
+        margin-left: 18px;
+    }
+    .button{
+        margin-left:30px
+    }
     
   }
